# filtration-app

./: .gitignore  README.md  SETUP.md
.claude/: settings.local.json
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: routes_auth.py  routes_scan.py
backend/app/auth/: google_oauth.py  session.py
backend/app/detection/: models.py  pipeline.py
backend/app/detection/llm/: classifier.py  prompts.py
backend/app/detection/rules/: attachments.py  auth_headers.py  content.py  domains.py  scoring.py  sender.py  urls.py
backend/app/gmail/: client.py  parser.py
backend/app/storage/: db.py  models.py
backend/app/tests/: test_app.py  test_format.py  test_pipeline.py  test_rules.py
backend/app/tests/fixtures/: giftcard_scam.eml  legit_newsletter.eml  phishing_paypal.eml
backend/app/web/: format.py  templates.py
backend/app/web/static/: app.css  manifest.webmanifest  service-worker.js
backend/app/web/templates/: base.html  dashboard.html  detail.html  index.html  privacy.html
backend/app/web/templates/partials/: results.html
