[project]
name = "filtration-app"
version = "0.1.0"
description = "Phone-based (PWA) app that scans a user's Gmail and flags fraudulent emails"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "cryptography>=42.0",
    "anthropic>=0.40",
    "ollama>=0.3",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.130",
    "beautifulsoup4>=4.12",
    "tldextract>=5.1",
    "rapidfuzz>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
